2004-03-02 James Ciesielski
	Marked those strings that are non-translatable as such and externalized 
	those strings that can be translated.  There is still work to be done in
	this area for this plugin.

	* src/org/eclipse/cdt/managedbuilder/core/ManagedBuilderCorePlugin.java
	* src/org/eclipse/cdt/managedbuilder/core/ManagedBuilderManager.java
	* src/org/eclipse/cdt/managedbuilder/core/ManagedCProjectNature.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/Configuration.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/GeneratedMakefileBuilder.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/MakefileGenerator.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/ManagedBuildInfo.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/Option.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/OptionReference.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/Target.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/Tool.java
	* src/org/eclipse/cdt/managedbuilder/internal/core/PluginResources.properties

2004-03-02 Sean Evoy
	Work to support feature C1, "Set Tool Command in Project". 
	Now it is possible to store an overridden tool command in a tool 
	reference. The tool command can be overridden directly in an 
	existing reference, or through the configuration, which creates a 
	new tool reference.

2004-02-26 Jeremiah Lott
	Added a header to the automatically generated makefiles to alert users 
	not to edit them. Also added includes directives to bring in user-supplied 
	makefiles to support additional targets, macro definitions, and custom 
	build steps. Strings are externalized.
	* src/org/eclipse/cdt/managedbuilder/internal/core/PluginResources.properties
	* src/org/eclipse/cdt/managedbuilder/internal/core/MakefileGenerator.java

2004-02-26 Sean Evoy
	Work for C14, add the ability to inherit a tool description via a tool 
	reference.
	
	Changed the schema to allow a tool reference to belong to a target.