@@ -17,7 +17,7 @@ ManagedMakeBuilder.message.updating = Updating project files...
 ManagedMakeBuilder.message.make = Calling {0} for project {1}
 ManagedMakeBuilder.message.creating.markers = Generating markers...
 ManagedMakeBuilder.message.error = Build error
-ManagedMakeBuilder.message.error.refresh = Error refreshing project. 
+ManagedMakeBuilder.message.error.refresh = Error refreshing project 
 ManagedMakeBuilder.message.finished = Build complete for project {0}
 ManagedMakeBuilder.comment.module.list = Every subdirectory with source files must be described here
 ManagedMakeBuilder.comment.source.list = Each subdirectory must contribute its source files here
